CSCE434/pp2/samples/jon_badswitch3.out

*** Error line 3.
    default: 1+1; break;
    ^^^^^^^
*** syntax error

